// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/processor.js composition should allow comments before composes 1`] = `
Object {
  "multiple-composes.css": Object {
    "a": "a",
    "b": "a b",
  },
}
`;

exports[`/processor.js composition should allow composes anywhere 1`] = `
Object {
  "multiple-composes.css": Object {
    "a": "a",
    "b": "a b",
    "c": "a b c",
  },
}
`;

exports[`/processor.js composition should compose a single class 1`] = `
Object {
  "single-composes.css": Object {
    "a": "a",
    "b": "a b",
  },
}
`;

exports[`/processor.js composition should compose from global keyword 1`] = `
Object {
  "global-compose.css": Object {
    "a": "b c d a",
  },
}
`;

exports[`/processor.js composition should compose from globals 1`] = `
Object {
  "global-compose.css": Object {
    "a": "b a",
  },
}
`;

exports[`/processor.js composition should compose from other files 1`] = `
Object {
  "packages/processor/test/specimens/composes.css": Object {
    "composes": "folder2 composes",
  },
  "packages/processor/test/specimens/folder/folder2.css": Object {
    "folder2": "folder2",
  },
}
`;

exports[`/processor.js composition should compose multiple classes 1`] = `
Object {
  "multiple-composes.css": Object {
    "a": "a",
    "b": "b",
    "c": "a b c",
  },
}
`;

exports[`/processor.js composition should compose with escaped classes 1`] = `
Object {
  "escaped-classes.css": Object {
    "c": "sm:foo c",
    "sm:foo": "sm:foo",
  },
}
`;
